bitfields/tests/compile_error_cases/errors/arrays/array_length_non_integer_literal.rs
use bitfields::bitfield;

const SIZE: usize = 4;

#[bitfield([u8; SIZE])]
pub struct Bitfield {
    a: u32,
}

fn main() {}

